decapod-reference/openstack/horizon/Deployment_horizon.yaml
# Source: horizon/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: horizon
    application: horizon
    component: server
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: horizon
      application: horizon
      component: server
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: horizon
        application: horizon
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "ed2c689a1c3f111a1aa1acdb10e8a49af9a48e8b8933618517e149e241471bde"
        configmap-etc-hash: "867341f8f358481d9e97db82160bcbcdc03dc0f2ed70cbe7716b2cc166e0151d"
    spec:
      serviceAccountName: horizon
      securityContext:
        runAsUser: 42420
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - horizon
                  - key: application
                    operator: In
                    values:
                    - horizon
                  - key: component
                    operator: In
                    values:
                    - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: horizon
          image: "deploy001:5000/stein/ubuntu-source-horizon:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 0
          command:
            - /tmp/horizon.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/horizon.sh
                  - stop
          ports:
            - name: web
              containerPort: 80
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySeconds: 150
            periodSeconds: 600
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySeconds: 180
            periodSeconds: 600
            timeoutSeconds: 5
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: static-horizon
              mountPath: /var/www/html/
            - name: horizon-bin
              mountPath: /tmp/horizon.sh
              subPath: horizon.sh
              readOnly: true
            - name: horizon-bin
              mountPath: /tmp/manage.py
              subPath: manage.py
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/apache2/sites-enabled/000-default.conf
              subPath: horizon.conf
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/apache2/conf-available/security.conf
              subPath: security.conf
              readOnly: true
            - name: horizon-bin
              mountPath: /var/www/cgi-bin/horizon/django.wsgi
              subPath: django.wsgi
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/local_settings
              subPath: local_settings
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/ceilometer_policy.json
              subPath: ceilometer_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/cinder_policy.json
              subPath: cinder_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/glance_policy.json
              subPath: glance_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/heat_policy.json
              subPath: heat_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/keystone_policy.json
              subPath: keystone_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/neutron_policy.json
              subPath: neutron_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/nova_policy.json
              subPath: nova_policy.json
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: wsgi-horizon
          emptyDir: {}
        - name: static-horizon
          emptyDir: {}
        - name: horizon-bin
          configMap:
            name: horizon-bin
            defaultMode: 0555
        - name: horizon-etc
          secret:
            secretName: horizon-etc
            defaultMode: 0444
